--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,1 +1,10 @@
 @import "tailwindcss";
+
+@theme {
+  --color-primary: #fe7743;
+  --color-secondary: #273f4f;
+  --color-background: #efeeea;
+  /* Custom Screens */
+  --breakpoint-xs: 24rem;
+  --breakpoint-xxs: 16rem;
+}
