optimizing the locaiton fetching

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,5 +1,27 @@
 @import "tailwindcss";
 
+@font-face {
+  font-family: 'Poppins';
+  src: url('/fonts/poppins-regular.woff2') format('woff2');
+  font-weight: 400;
+  font-style: normal;
+  font-display: swap;
+}
+@font-face {
+  font-family: 'Poppins';
+  src: url('/fonts/poppins-semiBold.woff2') format('woff2');
+  font-weight: 600;
+  font-style: normal;
+  font-display: swap;
+}
+@font-face {
+  font-family: 'Poppins';
+  src: url('/fonts/poppins-bold.woff2') format('woff2');
+  font-weight: 700;
+  font-style: normal;
+  font-display: swap;
+}
+
 @theme {
   --color-primary: #fe7743;
   --color-secondary: #273f4f;
@@ -7,4 +29,8 @@
   /* Custom Screens */
   --breakpoint-xs: 24rem;
   --breakpoint-xxs: 16rem;
+}
+
+*{
+  font-family: 'Poppins';
 }
