--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,22 +1,22 @@
 @import "tailwindcss";
 
 @font-face {
-  font-family: 'Poppins';
-  src: url('/fonts/poppins-regular.woff2') format('woff2');
+  font-family: "Poppins";
+  src: url("/fonts/poppins-regular.woff2") format("woff2");
   font-weight: 400;
   font-style: normal;
   font-display: swap;
 }
 @font-face {
-  font-family: 'Poppins';
-  src: url('/fonts/poppins-semiBold.woff2') format('woff2');
+  font-family: "Poppins";
+  src: url("/fonts/poppins-semiBold.woff2") format("woff2");
   font-weight: 600;
   font-style: normal;
   font-display: swap;
 }
 @font-face {
-  font-family: 'Poppins';
-  src: url('/fonts/poppins-bold.woff2') format('woff2');
+  font-family: "Poppins";
+  src: url("/fonts/poppins-bold.woff2") format("woff2");
   font-weight: 700;
   font-style: normal;
   font-display: swap;
@@ -31,6 +31,25 @@
   --breakpoint-xxs: 16rem;
 }
 
-*{
-  font-family: 'Poppins';
+* {
+  font-family: "Poppins";
+}
+
+/* Underline animation */
+.underline-animation {
+  position: relative;
+}
+.underline-animation::after {
+  position: absolute;
+  content: "";
+  background-color: #273f4f;
+  width: 100%;
+  height: 3px;
+  inset: 25px 0 0 0;
+  transform: scale(0);
+  transform-origin: center;
+  transition: transform .5s ease;
+}
+.underline-animation:hover::after{
+  transform: scaleX(1);
 }
