--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -35,6 +35,14 @@
   font-family: "Poppins";
 }
 
+.scrollbar-hidden {
+  -ms-overflow-style: none;
+  scrollbar-width: none;
+}
+.scrollbar-hidden::-webkit-scrollbar {
+  display: none;
+}
+
 /* Underline animation */
 .underline-animation {
   position: relative;
